--- a/client/src/components/common/BackSection/BackSection.scss
+++ b/client/src/components/common/BackSection/BackSection.scss
@@ -6,6 +6,7 @@
   background-color: white;
   position: sticky;
   top: 0;
+  overflow: hidden;
   z-index: 1;
   margin-bottom: 1em;
   transition: box-shadow 120ms;
